--- a/package.json
+++ b/package.json
@@ -33,11 +33,17 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@tabler/icons": "^3.12.0",
+		"@tabler/icons-svelte": "^3.12.0",
 		"bits-ui": "^0.21.13",
 		"clsx": "^2.1.1",
+		"embla-carousel": "^8.1.8",
 		"embla-carousel-svelte": "^8.1.8",
+		"embla-carousel-wheel-gestures": "^8.0.1",
 		"lucide-svelte": "^0.427.0",
 		"mode-watcher": "^0.4.1",
+		"svelte-carousel": "github:vadimkorr/svelte-carousel#pull/142/head",
+		"svelte-embla": "^0.0.7",
 		"svelte-sonner": "^0.3.27",
 		"tailwind-merge": "^2.5.2",
 		"tailwind-variants": "^0.2.1",
